--- a/chapter8.css
+++ b/chapter8.css
@@ -4,3 +4,49 @@
   box-sizing: border-box;
 }
 
+main {
+  width: 960px;
+  margin: 50px auto;
+}
+
+.item-list {
+  margin-bottom: 50px;
+}
+
+.item {
+  padding: 20px;
+  list-style: none;
+}
+
+.item:nth-child(odd) {
+  background-color: gray;
+}
+
+.color-box {
+  margin: 50px;
+  paddring: 960px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.box {
+  width: 30%;
+  height: 200px;
+  margin-right: 5%;
+  margin-bottom: 40px;
+  background-color: yellow;
+}
+
+.box:first-child,
+.box:nth-child(5),
+.box:last-child {
+  background-color: orange;
+}
+
+.box:nth-child(3n) {
+  margin-right: 0;
+}
+
+.box:nth-last-child(-n + 3) {
+  margin-bottom: 0;
+}
